--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,30 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.container{
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu_container{
+  display: flex;
+}
+
+.menu_container li{
+  padding: 10px;
+  list-style-type: none;
+}
+
+.menu_container li a{
+  font-size: 16px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+/* FOOTER REALTED CSS */
+.footer_container{
+  width: 100%;
+  height: 50px;
+  background: black;
+  color: #fff;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  display: flex;
+  justify-content: center;
 }
